syntax = "proto3";

package upgrade;

import "internal/versions/components/components.proto";

option go_package = "github.com/edgelesssys/constellation/v2/upgrade-agent/upgradeproto";

service Update {
  rpc ExecuteUpdate(ExecuteUpdateRequest) returns (ExecuteUpdateResponse);
}

message ExecuteUpdateRequest {
  reserved 1, 2;
  reserved "kubeadm_url", "kubeadm_hash";
  string wanted_kubernetes_version = 3;

  repeated components.Component kubernetes_components = 4;
}

message ExecuteUpdateResponse {}
